--- a/injuredpixels/windows/download/index.html
+++ b/injuredpixels/windows/download/index.html
@@ -11,28 +11,14 @@ description   : Download, install and run InjuredPixels on any PC, notebook or t
 ---
 
 {% capture thecontent %}
-    <p>
-        InjuredPixels for Windows is free and open source, and licensed under the <a href="{{ site.github.url
-        }}/injuredpixels/windows/license/">Apache License Version 2.0</a>. The source code is available <a
-        href="https://github.com/aurelitec/injuredpixels-windows" target="_blank">on GitHub</a>. We look forward to your
-        contributions!
-    </p>
-    <a href="https://github.com/aurelitec/injuredpixels-windows" target="_blank">
-        <img class="inline-logo" src="/img/third/social/github/github-logo.png" alt="GitHub" />
-    </a>
-{% endcapture %}
-{% include templates/contentsection.html heading="License" %}
-
-{% capture thecontent %}
-<h3 class="item-heading">Install InjuredPixels for Windows</h3>
+<h3 class="item-heading">Install InjuredPixels</h3>
 <p>
-    <strong>Version 4.0.0.127.</strong> Runs on any PC, laptop or tablet with Windows 10, 8, 7, Vista, or
-    XP<a title="On Windows XP you also need Microsoft .NET Framework 2.0 or above." href="http://www.microsoft.com/en-us/download/details.aspx?id=1639" target="_blank">*</a>.
-    The Installer program will copy InjuredPixels on your PC, create a Start Menu entry, and set up an uninstaller.
+    <strong>Version 4.0.0.127. 548KB.</strong> Runs on any PC, laptop or tablet with Windows 10, 8, 7, Vista, or XP<a title="On Windows XP you also need Microsoft .NET
+    Framework 2.0 or above." href="http://www.microsoft.com/en-us/download/details.aspx?id=1639" target="_blank">*</a>. The Installer program will copy
+    InjuredPixels on your PC, create a Start Menu entry, and set up an uninstaller.
 </p>
 <p>
     <a class="btn btn-primary" href="https://github.com/aurelitec/injuredpixels-windows/releases/download/v4.0/injuredpixels-install.exe" role="button">Download EXE</a>
-    <span class="tag tag-default ml-1">Only 548KB</span>
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Install" %}
@@ -40,13 +26,12 @@ description   : Download, install and run InjuredPixels on any PC, notebook or t
 {% capture thecontent %}
 <h3 class="item-heading">Download InjuredPixels Portable</h3>
 <p>
-    <strong>Version 4.0.0.127.</strong> Runs on any PC, laptop or tablet with Windows 10, 8, 7, Vista, or
+    <strong>Version 4.0.0.127. Only 40KB.</strong> Runs on any PC, laptop or tablet with Windows 10, 8, 7, Vista, or
     XP<a title="On Windows XP you also need Microsoft .NET Framework 2.0 or above." href="http://www.microsoft.com/en-us/download/details.aspx?id=1639" target="_blank">*</a>.
-    No installation is required. Just download and unpack the ZIP archive.
+    No installation is required. Just download and unpack the ZIP archive.<br />
 </p>
 <p>
     <a class="btn btn-primary" href="https://github.com/aurelitec/injuredpixels-windows/releases/download/v4.0/injuredpixels-portable.zip" role="button">Download ZIP</a>
-    <span class="tag tag-default ml-1">Only 40KB</span>
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Portable" %}
@@ -54,22 +39,35 @@ description   : Download, install and run InjuredPixels on any PC, notebook or t
 {% capture thecontent %}
 <h3 class="item-heading">Run InjuredPixels HTA</h3>
 <p>
-    <strong>Version 3.5.0.100.</strong> InjuredPixels HTA (HTML Application) is a tiny special kind of web page that can be run by Internet Explorer as a
+    <strong>Version 3.5.0.100. Only 17KB.</strong> InjuredPixels HTA (HTML Application) is a tiny special kind of web page that can be run by Internet Explorer as a
     normal Windows program. It runs on any PC, laptop or tablet with Windows 10, 8, 7, Vista, or XP. No installation
     is required. Just download and select Open or Run.
 </p>
 <p>
     <a class="btn btn-primary" href="http://download.aurelitec.com/injuredpixels/web/hta/injuredpixels.hta" role="button">Download HTA</a>
-    <span class="tag tag-default ml-1">Only 17KB</span>
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="HTA" %}
 
 {% capture thecontent %}
-    <div class="square-middle">
-        <a href="http://www.softpedia.com/get/System/System-Miscellaneous/InjuredPixels.shtml" target="_blank">
-            <img height="120" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
+    <p>
+        InjuredPixels for Windows is free and open source, and licensed under the <a href="{{ site.github.url }}/injuredpixels/windows/license/">Apache License
+        Version 2.0</a>. The source code is available <a href="https://github.com/aurelitec/injuredpixels-windows" target="_blank">on GitHub</a>. We look
+        forward to your contributions!
+    </p>
+    <p>
+        <a href="https://github.com/aurelitec/injuredpixels-windows" target="_blank">
+            <img class="inline-logo" src="/img/third/social/github/github-logo.png" alt="GitHub" />
         </a>
-    </div>
+    </p>
 {% endcapture %}
-{% include templates/contentsection.html heading="100% Clean" %}
+{% include templates/contentsection.html heading="License" %}
+
+<div class="badge-stripe">
+    <a href="http://www.softpedia.com/get/System/System-Miscellaneous/InjuredPixels.shtml" target="_blank">
+        <img height="120" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
+    </a>
+    <a href="http://injuredpixels.software.informer.com/awards/" target="_blank">
+        <img height="120" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/software-informer/software-informer-clean-award.png" alt="Software Informer Virus Free award" />
+    </a>
+</div>
