--- a/injuredpixels/windows/help/index.html
+++ b/injuredpixels/windows/help/index.html
@@ -10,17 +10,17 @@ description : Learn how to use InjuredPixels for Windows to check your PC, lapto
 
 {% capture thecontent %}
     <div class="help-section">
-        <p>InjuredPixels allows you to easily check for defective (hot, dead or stuck) pixels on LCD monitors.</p>
         <p>
-          InjuredPixels can be used to test a new LCD monitor before purchasing, or an already purchased monitor during
-          the warranty period (as you may get a replacement according to the manufacturer's dead pixel policy).
-          InjuredPixels fills the entire screen with a primary or custom color, allowing you to inspect the screen for
-          pixels that do not match the selected color.
+            InjuredPixels allows you to easily check for defective (hot, dead or stuck) pixels on LCD monitors.
         </p>
         <p>
-          The program is easy to use: click or use the arrow keys to cycle through colors or right-click to get the menu
-          with the main commands. InjuredPixels can be run directly without having to install it on your computer: just
-          download the portable version and run.
+          InjuredPixels can be used to test a new LCD monitor before purchasing, or an already purchased monitor during the warranty period (as you may get a
+          replacement according to the manufacturer's dead pixel policy). InjuredPixels fills the entire screen with a primary or custom color, allowing you to
+          inspect the screen for pixels that do not match the selected color.
+        </p>
+        <p>
+          The program is easy to use: click or use the arrow keys to cycle through colors or right-click to get the menu with the main commands. InjuredPixels
+          can be run directly without having to install it on your computer: just download the portable version and run.
         </p>
     </div>
 {% endcapture %}
@@ -29,93 +29,124 @@ description : Learn how to use InjuredPixels for Windows to check your PC, lapto
 {% capture thecontent %}
     <div class="help-section">
 
-        <p>The main menu contains items that perform the main actions of InjuredPixels.</p>
+        <p>
+            The main menu contains items that perform the main actions of InjuredPixels.
+        </p>
         <p>
           To open the main menu, click the right mouse button anywhere on the screen, or press the Esc or the Menu key on your keyboard. The main menu is
           automatically opened when the program starts.
         </p>
-        <p>To close the main menu without selecting any item, click the left mouse button anywhere on the screen, or press Esc on your keyboard.</p>
+        <p>
+            To close the main menu without selecting any item, click the left mouse button anywhere on the screen, or press Esc on your keyboard.
+        </p>
+
+        <p class="mb-3">
+            <img class="img-fluid" src="/img/apps/injuredpixels/windows/help/injuredpixels-windows-help-menu-screenshot.png"
+            alt="InjuredPixels for Windows Help - The Main Menu Screenshot" />
+        </p>
 
         <h4 class="help-subsection-heading">Black</h4>
         <p>
-          Click this menu item to change the screen color to Black (#000000). Hot or glowing pixels (permanently lit white pixels) or stuck pixels (pixels with one or
-          two sub-pixels always on or always off) are usually best seen against a dark or black background.
+          Click this menu item to change the screen color to Black (#000000). Hot or glowing pixels (permanently lit white pixels) or stuck pixels (pixels with
+          one or two sub-pixels always on or always off) are usually best seen against a dark or black background.
         </p>
 
         <h4 class="help-subsection-heading">White</h4>
         <p>
-          Click this menu item to change the screen color to White (#FFFFFF). Dead pixels (defective pixels that remain unlit) are usually best seen against a white
-          background.
+          Click this menu item to change the screen color to White (#FFFFFF). Dead pixels (defective pixels that remain unlit) are usually best seen against a
+          white background.
         </p>
 
         <h4 class="help-subsection-heading">Red</h4>
-        <p>Click this menu item to change the screen color to Red (#FF0000). Red is one of three sub-pixels which produce the visible color of the pixel by their relative
-        brightness.</p>
+        <p>
+            Click this menu item to change the screen color to Red (#FF0000). Red is one of three sub-pixels which produce the visible color of the pixel by
+            their relative brightness.
+        </p>
 
         <h4 class="help-subsection-heading">Green</h4>
         <p>
-          Click this menu item to change the screen color to Green (#00FF00). Green is one of three sub-pixels which produce the visible color of the pixel by their
-          relative brightness.
+          Click this menu item to change the screen color to Green (#00FF00). Green is one of three sub-pixels which produce the visible color of the pixel by
+          their relative brightness.
         </p>
         <p>
-          Technical note: InjuredPixels uses the primary Green color of a RGB display (#00FF00), that corresponds to the Lime Web Color and it is different from the
-          Green color defined in HTML specifications.
+          Technical note: InjuredPixels uses the primary Green color of a RGB display (#00FF00), that corresponds to the Lime Web Color and it is different from
+          the Green color defined in HTML specifications.
         </p>
 
         <h4 class="help-subsection-heading">Blue</h4>
         <p>
-          Click this menu item to change the screen color to Blue (#0000FF). Blue is one of three sub-pixels which produce the visible color of the pixel by their
-          relative brightness.
+          Click this menu item to change the screen color to Blue (#0000FF). Blue is one of three sub-pixels which produce the visible color of the pixel by
+          their relative brightness.
         </p>
 
         <h4 class="help-subsection-heading">Custom Color</h4>
         <p>
-          Click this menu item to change the screen color to a custom color you can select using the <i>Select Custom Color...</i> and <i>Random Custom Color</i> menu items
-          below.
+          Click this menu item to change the screen color to a custom color you can select using the <i>Select Custom Color...</i> and <i>Random Custom
+          Color</i> menu items below.
         </p>
 
         <h4 class="help-subsection-heading">Next Color</h4>
         <p>
-          Click this menu item to cycle through the colors and select the next color for the screen. Alternatively, you can press the Right Arrow on your keyboard when
-          the main menu is closed, or simply click the left mouse button anywhere on the screen to select the next color.
+          Click this menu item to cycle through colors and select the next color for the screen. Alternatively, you can press the Right Arrow on your keyboard
+          when the main menu is closed, or simply click the left mouse button anywhere on the screen to select the next color.
         </p>
 
         <h4 class="help-subsection-heading">Previous Color</h4>
         <p>
-          Click this menu item to cycle through the colors and select the previous color for the screen. Alternatively, you can press the Left Arrow on your keyboard when
-          the main menu is closed.
+          Click this menu item to cycle through colors and select the previous color for the screen. Alternatively, you can press the Left Arrow on your
+          keyboard when the main menu is closed.
         </p>
 
         <h4 class="help-subsection-heading">Select Custom Color...</h4>
-        <p>Click this menu item to open a Color dialog box and select a new custom color for the screen.</p>
+        <p>
+            Click this menu item to open a Color dialog box and select a new custom color for the screen.
+        </p>
 
         <h4 class="help-subsection-heading">Random Custom Color</h4>
-        <p>Click this menu item to change the custom color to a randomly generated color.</p>
+        <p>
+            Click this menu item to change the custom color to a randomly generated color.
+        </p>
 
         <h4 class="help-subsection-heading">Show Mouse Cursor</h4>
-        <p>Check this menu item to show the mouse cursor. To make it easier to spot defective pixels on the screen, the mouse cursor is hidden when InjuredPixels starts.</p>
-        <p>Please note that if you have selected to hide the mouse cursor and open the pop-up menu or switch to other programs, the mouse cursor will become visible.</p>
+        <p>
+            Check this menu item to show the mouse cursor. To make it easier to spot defective pixels on the screen, the mouse cursor is hidden when
+            InjuredPixels starts.
+        </p>
+        <p>
+            Please note that if you have selected to hide the mouse cursor and open the pop-up menu or switch to other programs, the mouse cursor will become
+            visible.
+        </p>
 
         <h4 class="help-subsection-heading">Always on Top</h4>
-        <p>Check this menu item to ensure that the InjuredPixels full screen window remains on top of all other windows.</p>
+        <p>
+            Check this menu item to ensure that the InjuredPixels full screen window remains on top of all other windows.
+        </p>
+
+        <h4 class="help-subsection-heading">Touch Mode</h4>
+        <p>
+            Check this menu item on touchscreens to let the user gently rub any screen area while testing. This will disable cycling through colors using
+            clicks (touches).
+        </p>
 
         <h4 class="help-subsection-heading">Check Multiple Monitors</h4>
         <p>
-          This menu item becomes visible when more than one monitor is connected to your computer. You can use its sub-items to select which monitors you want to fill with the
-          background color and check for dead pixels or other defects.
+          This menu item becomes visible when more than one monitor is connected to your computer. You can use its sub-items to select which monitors you want
+          to fill with the background color and check for dead pixels or other defects.
         </p>
 
         <h4 class="help-subsection-heading">About</h4>
-        <p>Click this menu item to display program information, version and copyright.</p>
         <p>
-          This menu item also contains sub-items that open various InjuredPixels pages. You can also open the Online
-           Help Page by pressing F1 on your keyboard, even if the main menu is closed.
+            Click this menu item to display program information, version and copyright.
+        </p>
+        <p>
+          This menu item also contains sub-items that open various InjuredPixels pages. You can also open the Online Help Page by pressing F1 on your keyboard,
+          even if the main menu is closed.
         </p>
 
         <h4 class="help-subsection-heading">Quit</h4>
         <p>
-            Click this menu item to close the program. Alternatively, you can press Q or Alt+F4 on your keyboard, even
-            if the main menu is closed.</p>
+            Click this menu item to close the program. Alternatively, you can press Q or Alt+F4 on your keyboard, even if the main menu is closed.
+        </p>
     </div>
 {% endcapture %}
 {% include templates/contentsection.html heading="The Menu" %}
