--- a/injuredpixels/windows/history/index.html
+++ b/injuredpixels/windows/history/index.html
@@ -10,29 +10,54 @@ description : View full version history for InjuredPixels for Windows, and see a
 
 {% capture thecontent %}
 <ul class="list-group">
-    <li class="list-group-item">InjuredPixels for Windows has gone Open Source, on GitHub</li>
-    <li class="list-group-item">Save and restore colors and settings</li>
-    <li class="list-group-item">Added a Touch Mode to let the user gently rub any touchscreen area while testing</li>
-    <li class="list-group-item">Added support for high-resolution displays</li>
-    <li class="list-group-item">Improved interface</li>
-    <li class="list-group-item"><time class="text-muted"><small>February 5, 2017</small></time></li>
+    <li class="list-group-item">
+        InjuredPixels for Windows has gone Open Source on GitHub
+    </li>
+    <li class="list-group-item">
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
+        Save and restore colors and settings
+    </li>
+    <li class="list-group-item">
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
+        Added a Touch Mode to let the user gently rub any touchscreen area while testing
+    </li>
+    <li class="list-group-item">
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
+        Added support for high-resolution displays
+    </li>
+    <li class="list-group-item">
+        Improved interface
+    </li>
+    <li class="list-group-item">
+        <time class="text-muted"><small>February 5, 2017</small></time>
+    </li>
 </ul>
 {% endcapture %}
 {% include templates/contentsection.html heading="Version 4.0" %}
 
 {% capture thecontent %}
 <ul class="list-group">
-    <li class="list-group-item">Improved native support for Windows 10</li>
-    <li class="list-group-item"><time class="text-muted"><small>November 18, 2015</small></time></li>
+    <li class="list-group-item">
+        Improved native support for Windows 10
+    </li>
+    <li class="list-group-item">
+        <time class="text-muted"><small>November 18, 2015</small></time>
+    </li>
 </ul>
 {% endcapture %}
 {% include templates/contentsection.html heading="Version 3.5" %}
 
 {% capture thecontent %}
 <ul class="list-group">
-    <li class="list-group-item">Improved modern interface</li>
-    <li class="list-group-item">Improved native support for Windows 8</li>
-    <li class="list-group-item"><time class="text-muted"><small>October 9, 2012</small></time></li>
+    <li class="list-group-item">
+        Improved modern interface
+    </li>
+    <li class="list-group-item">
+        Improved native support for Windows 8
+    </li>
+    <li class="list-group-item">
+        <time class="text-muted"><small>October 9, 2012</small></time>
+    </li>
 </ul>
 {% endcapture %}
 {% include templates/contentsection.html heading="Version 3.0" %}
@@ -43,7 +68,9 @@ description : View full version history for InjuredPixels for Windows, and see a
         <span class="tag tag-default tag-pill float-xs-right">New</span>
         Added multi-monitor support to check any or all connected monitors/displays for dead pixels
     </li>
-    <li class="list-group-item"><time class="text-muted"><small>October 12, 2010</small></time></li>
+    <li class="list-group-item">
+        <time class="text-muted"><small>October 12, 2010</small></time>
+    </li>
 </ul>
 {% endcapture %}
 {% include templates/contentsection.html heading="Version 2.1" %}
@@ -54,7 +81,9 @@ description : View full version history for InjuredPixels for Windows, and see a
         <span class="tag tag-default tag-pill float-xs-right">New</span>
         Added a new edition of the program in the form of a HTML Application (HTA)
     </li>
-    <li class="list-group-item"><time class="text-muted"><small>April 30, 2010</small></time></li>
+    <li class="list-group-item">
+        <time class="text-muted"><small>April 30, 2010</small></time>
+    </li>
 </ul>
 {% endcapture %}
 {% include templates/contentsection.html heading="Version 2.0" %}
@@ -65,7 +94,9 @@ description : View full version history for InjuredPixels for Windows, and see a
         <span class="tag tag-default tag-pill float-xs-right">New</span>
         First public release
     </li>
-    <li class="list-group-item"><time class="text-muted"><small>December 03, 2009</small></time></li>
+    <li class="list-group-item">
+        <time class="text-muted"><small>December 03, 2009</small></time>
+    </li>
 </ul>
 {% endcapture %}
 {% include templates/contentsection.html heading="Version 1.0" %}
