Update content structure and layout of the licenses pages; responsive fixes

--- a/injuredpixels/android/license/index.html
+++ b/injuredpixels/android/license/index.html
@@ -8,7 +8,7 @@ description : You are free to use InjuredPixels for Android to check the screen 
 ---
 
 {% capture thecontent %}
-<h3 class="page-heading">InjuredPixels for Android License Agreement</h3>
+<h2 class="aur-page-heading">InjuredPixels for Android License Agreement</h2>
 {% include various/licenses/apache.html years="2016-2017" %}
 {% endcapture %}
-{% include templates/contentsection.html heading="License" %}
+{% include templates/nosidebar-content.html %}
