--- a/injuredpixels/windows/license/index.html
+++ b/injuredpixels/windows/license/index.html
@@ -7,9 +7,8 @@ title       : InjuredPixels for Windows License Agreement
 description : You are free to use InjuredPixels for Windows to check your PC, laptop or tablet screen for dead pixels, scratches or defects. Read the full License.
 ---
 
-<div class="row justify-content-center">
-    <div class="col-lg-8">
-        <h3 class="aur-content-heading">InjuredPixels for Windows License Agreement</h3>
-        {% include various/licenses/apache.html years="2009-2017" %}
-    </div>
-</div>
+{% capture thecontent %}
+<h2 class="aur-page-heading">InjuredPixels for Windows License Agreement</h2>
+{% include various/licenses/apache.html years="2009-2017" %}
+{% endcapture %}
+{% include templates/nosidebar-content.html %}
