Change app jumbotrons layout

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@ description : Free, out of the box apps that help you work smarter and better. B
         </div>
     </div>
 
-    <a class="carousel-control-prev hidden-lg-down" href="#homepage-carousel" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#homepage-carousel" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next hidden-lg-down" href="#homepage-carousel" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#homepage-carousel" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
