--- a/injuredpixels/windows/index.html
+++ b/injuredpixels/windows/index.html
@@ -91,15 +91,15 @@ image         : /img/apps/injuredpixels/windows/injuredpixels-jumbotron-shot.png
             </div>
             <div class="col-sm-6 col-lg-4 aur-content-item">
                 <h3 class="aur-quote-heading">
-                    <a class="aur-heading-link" href="http://downloads.pcauthority.com.au/article/29129-injuredpixels_hta_edition" target="_blank">PC &amp; Tech Authority</a>
+                    <a class="aur-heading-link" href="http://injuredpixels.software.informer.com/" target="_blank">Software Informer</a>
                 </h3>
-                <p><q>Verdict: A simple and convenient tool which makes it much easier to locate dead pixels on an LCD display.</q></p>
+                <p><q>This solution has no rival in the simplicity department. Software tools simply don't come any simpler than InjuredPixels.</q></p>
             </div>
             <div class="col-sm-6 col-lg-4 aur-content-item">
                 <h3 class="aur-quote-heading">
-                    <a class="aur-heading-link" href="http://www.rockybytes.com/injuredpixels" target="_blank">Rocky Bytes</a>
+                    <a class="aur-heading-link" href="http://downloads.pcauthority.com.au/article/29129-injuredpixels_hta_edition" target="_blank">PC &amp; Tech Authority</a>
                 </h3>
-                <p><q>Download InjuredPixels and make sure that you don't end up wasting hundreds and thousands of dollars.</q></p>
+                <p><q>Verdict: A simple and convenient tool which makes it much easier to locate dead pixels on an LCD display.</q></p>
             </div>
         </div>
     </section>
