Use custom url variable sitewide

--- a/colorveil/windows/download/index.html
+++ b/colorveil/windows/download/index.html
@@ -51,7 +51,7 @@ description   : Download, install and run ColorVeil on any PC, notebook or table
             <h2 class="aur-content-heading">License Agreement</h2>
             <p>
                 ColorVeil is free for use in any environment: personal, academic, commercial, government, business, non-profit, and for-profit. Before using
-                ColorVeil, you must accept its <a href="{{ site.github.url }}/colorveil/windows/license/">License Agreement</a>.
+                ColorVeil, you must accept its <a href="{{ site.custom.url }}/colorveil/windows/license/">License Agreement</a>.
             </p>
         </div>
     </div>
@@ -59,12 +59,12 @@ description   : Download, install and run ColorVeil on any PC, notebook or table
         <ul class="list-unstyled aur-vert-logo-list">
             <li>
                 <a href="http://www.softpedia.com/get/Desktop-Enhancements/Other-Desktop-Enhancements/ColorVeil.shtml#status" target="_blank">
-                    <img height="110" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
+                    <img height="110" class="featured-logo" src="{{ site.custom.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
                 </a>
             </li>
             <li>
                 <a href="http://colorveil.software.informer.com/awards/" target="_blank">
-                    <img height="110" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/software-informer/software-informer-clean-award.png" alt="Software Informer Virus Free award" />
+                    <img height="110" class="featured-logo" src="{{ site.custom.url }}/img/third/reviews/s/software-informer/software-informer-clean-award.png" alt="Software Informer Virus Free award" />
                 </a>
             </li>
         </ul>
