--- a/injuredpixels/windows/download/index.html
+++ b/injuredpixels/windows/download/index.html
@@ -48,7 +48,7 @@ description   : Download, install and run InjuredPixels on any PC, notebook or t
         <div class="aur-content-group">
             <h2 class="aur-content-heading">License Agreement</h2>
             <p>
-                InjuredPixels for Windows is free and open source, and licensed under the <a href="{{ site.github.url }}/injuredpixels/windows/license/">Apache License
+                InjuredPixels for Windows is free and open source, and licensed under the <a href="{{ site.custom.url }}/injuredpixels/windows/license/">Apache License
                 Version 2.0</a>. The source code is available <a href="https://github.com/aurelitec/injuredpixels-windows" target="_blank">on GitHub</a>. We look
                 forward to your contributions!
             </p>
@@ -68,12 +68,12 @@ description   : Download, install and run InjuredPixels on any PC, notebook or t
             </li>
             <li>
                 <a href="http://www.softpedia.com/get/System/System-Miscellaneous/InjuredPixels.shtml#status" target="_blank">
-                    <img height="110" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
+                    <img height="110" class="featured-logo" src="{{ site.custom.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
                 </a>
             </li>
             <li>
                 <a href="http://injuredpixels.software.informer.com/awards/" target="_blank">
-                    <img height="110" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/software-informer/software-informer-clean-award.png" alt="Software Informer Virus Free award" />
+                    <img height="110" class="featured-logo" src="{{ site.custom.url }}/img/third/reviews/s/software-informer/software-informer-clean-award.png" alt="Software Informer Virus Free award" />
                 </a>
             </li>
         </ul>
