--- a/pixelhealer/windows/help/index.html
+++ b/pixelhealer/windows/help/index.html
@@ -16,7 +16,7 @@ description : Learn how to use PixelHealer to try to fix dead, stuck or hot pixe
             LCD or TFT screens, on desktop monitors, laptops or tablets.
         </p>
         <p>
-            First of all, use our own free <a href="{{ site.github.url }}/injuredpixels/windows/" target="_blank">InjuredPixels</a> portable app to check your
+            First of all, use our own free <a href="{{ site.custom.url }}/injuredpixels/windows/" target="_blank">InjuredPixels</a> portable app to check your
             screen or tablet for dead, stuck or hot pixels. Then, download and run PixelHealer without installation, cover the dead pixel with the colored
             repair window, and click Start Flashing. PixelHealer uses the already tested concept that flashing RGB colors over a dead or stuck pixel will revive
             it. So let the repair window run for a while, then check to see if the dead pixel has been fixed or revived. And repeat the process if necessary.
@@ -31,7 +31,7 @@ description : Learn how to use PixelHealer to try to fix dead, stuck or hot pixe
         <h2 class="aur-content-heading">Quick Start</h2>
         <p>
             To start and use PixelHealer, no installation is required: simply click the "Download And Run" button from the
-            <a href="{{ site.github.url}}/pixelhealer/windows/download/">PixelHealer download page</a>, save the Windows executable program file to a location
+            <a href="{{ site.custom.url}}/pixelhealer/windows/download/">PixelHealer download page</a>, save the Windows executable program file to a location
             on your computer and then open or run the file.
         </p>
         <p>
