--- a/thumbico/windows/download/index.html
+++ b/thumbico/windows/download/index.html
@@ -38,7 +38,7 @@ description   : Download, install and run Thumbico on any PC, notebook or tablet
             <h2 class="aur-content-heading">License Agreement</h2>
             <p>
                 Thumbico is free for use in any environment, including but not necessarily limited to: personal, academic, commercial, government, business,
-                non-profit, and for-profit. Before using Thumbico, you must accept its <a href="{{ site.github.url }}/thumbico/windows/license/">License
+                non-profit, and for-profit. Before using Thumbico, you must accept its <a href="{{ site.custom.url }}/thumbico/windows/license/">License
                 Agreement</a>.
             </p>
         </div>
@@ -47,7 +47,7 @@ description   : Download, install and run Thumbico on any PC, notebook or tablet
         <ul class="list-unstyled aur-vert-logo-list">
             <li>
                 <a href="http://www.softpedia.com/get/Multimedia/Graphic/Graphic-Editors/Thumbico.shtml#status" target="_blank">
-                    <img height="110" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
+                    <img height="110" class="featured-logo" src="{{ site.custom.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
                 </a>
             </li>
         </ul>
