--- a/_testimonials/colorveil/arrowsmith.html
+++ b/_testimonials/colorveil/arrowsmith.html
@@ -9,4 +9,4 @@ words : []
 
 "ColorVeil gives us the perfect solution for children and young people with Dyslexia / Scotopic Sensitivity Syndrome, allowing
 full customisation to match the colours stated by the optometrist."
-<a href="{{ site.github.url }}/colorveil/windows/testimonials/arrowsmith/">Read More</a>
+<a href="{{ site.custom.url }}/colorveil/windows/testimonials/arrowsmith/">Read More</a>
