--- a/cinemadrape/windows/download/index.html
+++ b/cinemadrape/windows/download/index.html
@@ -38,7 +38,7 @@ description   : Download, install and run CinemaDrape on any PC, notebook or tab
             <h2 class="aur-content-heading">License Agreement</h2>
             <p>
                 CinemaDrape is free for use in any environment, including but not necessarily limited to: personal, academic, commercial, government, business,
-                non-profit, and for-profit. Before using CinemaDrape, you must accept its <a href="{{ site.github.url }}/cinemadrape/windows/license/">License
+                non-profit, and for-profit. Before using CinemaDrape, you must accept its <a href="{{ site.custom.url }}/cinemadrape/windows/license/">License
                 Agreement</a>.
             </p>
         </div>
@@ -47,13 +47,13 @@ description   : Download, install and run CinemaDrape on any PC, notebook or tab
         <ul class="list-unstyled aur-vert-logo-list">
             <li>
                 <a href="http://www.softpedia.com/get/Desktop-Enhancements/Other-Desktop-Enhancements/CinemaDrape.shtml#status" target="_blank">
-                    <img height="110" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia
+                    <img height="110" class="featured-logo" src="{{ site.custom.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia
                     Clean Award" />
                 </a>
             </li>
             <li>
                 <a href="http://cinemadrape.software.informer.com/awards/" target="_blank">
-                    <img height="110" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/software-informer/software-informer-clean-award.png"
+                    <img height="110" class="featured-logo" src="{{ site.custom.url }}/img/third/reviews/s/software-informer/software-informer-clean-award.png"
                     alt="Software Informer Virus Free award" />
                 </a>
             </li>
