--- a/htmtied/windows/download/index.html
+++ b/htmtied/windows/download/index.html
@@ -27,7 +27,7 @@ description : Download, install and run HTMtied on any PC, notebook or tablet wi
             <h2 class="aur-content-heading">License Agreement</h2>
             <p>
                 HTMtied is free for use in any environment, including but not necessarily limited to: personal, academic, commercial, government, business,
-                non-profit, and for-profit. Before using HTMtied, you must accept its <a href="{{ site.github.url }}/htmtied/windows/license/">License
+                non-profit, and for-profit. Before using HTMtied, you must accept its <a href="{{ site.custom.url }}/htmtied/windows/license/">License
                 Agreement</a>.
             </p>
         </div>
@@ -36,7 +36,7 @@ description : Download, install and run HTMtied on any PC, notebook or tablet wi
         <ul class="list-unstyled aur-vert-logo-list">
             <li>
                 <a href="http://www.softpedia.com/get/PORTABLE-SOFTWARE/Office/Clipboard/HTMtied-Portable.shtml#status" target="_blank">
-                    <img height="110" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
+                    <img height="110" class="featured-logo" src="{{ site.custom.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia Clean Award" />
                 </a>
             </li>
         </ul>
