--- a/pixelhealer/windows/download/index.html
+++ b/pixelhealer/windows/download/index.html
@@ -38,7 +38,7 @@ description   : Download, install and run PixelHealer on any PC, notebook or tab
             <h2 class="aur-content-heading">License Agreement</h2>
             <p>
                 PixelHealer is free for use in any environment, including but not necessarily limited to: personal, academic, commercial, government, business,
-                non-profit, and for-profit. Before using PixelHealer, you must accept its <a href="{{ site.github.url }}/pixelhealer/windows/license/">License
+                non-profit, and for-profit. Before using PixelHealer, you must accept its <a href="{{ site.custom.url }}/pixelhealer/windows/license/">License
                 Agreement</a>.
             </p>
         </div>
@@ -47,7 +47,7 @@ description   : Download, install and run PixelHealer on any PC, notebook or tab
         <ul class="list-unstyled aur-vert-logo-list">
             <li>
                 <a href="http://www.softpedia.com/get/System/System-Info/PixelHealer.shtml#status" target="_blank">
-                    <img height="110" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia
+                    <img height="110" class="featured-logo" src="{{ site.custom.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia
                     Clean Award" />
                 </a>
             </li>
